--- a/assets/sass/partials/_unsemantic-grid-responsive.sass
+++ b/assets/sass/partials/_unsemantic-grid-responsive.sass
@@ -2,15 +2,16 @@
 /* This file has a mobile-to-desktop breakpoint */
 /* ============================================ */
 
-$media-mobile: 767px !default
+$media-mobile-max: 767px !default
+$media-desktop-min: 768px !default
 
 @import "unsemantic-ie-snap"
 
 @media screen
   @import "unsemantic-grid-base"
 
-@media screen and (max-width: $media-mobile)
+@media screen and (max-width: $media-mobile-max)
   @import "unsemantic-grid-mobile"
 
-@media screen and (min-width: $media-mobile)
+@media screen and (min-width: $media-desktop-min)
   @import "unsemantic-grid-desktop"
