--- a/assets/stylesheets/unsemantic-grid-responsive-no-ie7-rtl.css
+++ b/assets/stylesheets/unsemantic-grid-responsive-no-ie7-rtl.css
@@ -550,7 +550,7 @@
     width: 100%;
   }
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .grid-100:before,
   .grid-100:after {
     content: ".";
