--- a/assets/stylesheets/unsemantic-grid-responsive.css
+++ b/assets/stylesheets/unsemantic-grid-responsive.css
@@ -761,7 +761,7 @@
     width: 100%;
   }
 }
-@media screen and (min-width: 767px) {
+@media screen and (min-width: 768px) {
   .grid-100:before,
   .grid-100:after {
     content: ".";
